--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1905,3 +1905,8 @@ input[type="range"]::-ms-fill-lower {
     line-height: 1;
   }
 }
+
+.py-108 {
+  padding-top: 108px;
+  padding-bottom: 108px;
+}
